<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_nom"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textNom"
        android:layout_marginTop="16dp"
        android:text="@string/label_prenom"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPrenom"
        android:layout_marginTop="16dp"
        android:text="@string/label_age"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textCompetences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textAge"
        android:layout_marginTop="16dp"
        android:text="@string/label_competences"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textTelephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textCompetences"
        android:layout_marginTop="16dp"
        android:text="@string/label_telephone"
        android:textSize="18sp" />



    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTelephone"
        android:layout_marginTop="16dp"
        android:text="OK"
        android:textSize="18sp"
        android:background="#2196F3"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnOK"
        android:layout_marginTop="16dp"
        android:text="@string/btnRetour"
        android:textSize="18sp"
        android:background="#FFC107"
        android:textColor="#FFFFFF" />
</RelativeLayout>
